--- a/index.html
+++ b/index.html
@@ -38,18 +38,28 @@
 		<h2>MY PROJECTS</h2>
 		<p>In here, you will find all of the projects that I've been developing throughout my time using Unity Game Engine.</p>
 		<div class="projects-grid">
+
 			<div class="crateninja">
 				<a href="https://thelegendknightgames.itch.io/crate-ninja">
 					<h3>Crate Ninja</h3>
 					<img src="CrateNinja.jpg">
 				</a>
         	</div>
+
         	<div class="flaptofreedom">	
         		<a href="https://thelegendknightgames.itch.io/flap-to-freedom">
         			<h3>Flap To Freedom</h3>
         			<img src="FlapToFreedom.jpg" width="300px" height="300px">
         		</a>   	
         	</div>
+
+        	<div class="skyblaster">
+        		<a href="https://thelegendknightgames.itch.io/sky-blaster">
+        			<h3>Sky Blaster</h3>
+        			<img src="Sky Blaster.jpg">
+        		</a>
+        	</div>
+
         </div>
 	</section>
 
