--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 	<section id="about" class="section2">
 		<h2>ABOUT ME</h2>
-		<p>Hello, my name is Stelios. I was born in Athens. I really love video games and I am a game developer. My passion for games started when I was very young and after a few years I have realized that I would like to make my own video games and to start my carrier as a game developer, and I have always been interested in being creative and passionate in achieving my goals. I've been working on some projects throughout my time with C# on the Unity Game Engine. However, I am going to develop my skills in the field by creating collaborations and new video games in the future.</p>
+		<p>Hi, I’m Stelios, a 19-year-old Video Game Developer with several years of experience in the Unity Game Engine and C# programming. My passion for video games began in childhood, and now I'm dedicated to creating them. I’ve always been driven by my goals and am excited to keep pursuing my passion through game development.</p>
 	</section>
 
 
