--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<script src="https://kit.fontawesome.com/6ee80224ef.js" crossorigin="anonymous"></script>
 </head>
 <body>
-	<img src="MyLatestPhoto.jpg" width="150" height="150" alt="My Latest Photo">
+	<img src="My Photo.jpg" width="150" height="150" alt="My Latest Photo">
 	<h1>STELIOSKROM<br><p>Game Developer</p></h1><br>
 
 
