Add - Added javascript file and recreated contact functionality

--- a/index.html
+++ b/index.html
@@ -1,115 +1,99 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>STELIOSKROM Portfolio</title>
-	<script src="https://kit.fontawesome.com/6ee80224ef.js" crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>STELIOSKROM Portfolio</title>
+    <script src="https://kit.fontawesome.com/6ee80224ef.js" crossorigin="anonymous"></script> <!-- Font Awesome -->
 </head>
 <body>
-	<img src="My Photo.jpg" width="150" height="150" alt="My Latest Photo">
-	<h1>STELIOSKROM<br><p>Game Developer</p></h1><br>
+    <img src="My Photo.jpg" width="150" height="150" alt="My Latest Photo">
+    <h1>STELIOSKROM<br><p>Game Developer</p></h1><br>
 
+    <nav class="navbar">
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
 
-	<nav class="navbar">
-		<ul>
-			<li><a href="#home">Home</a></li>
-			<li><a href="#about">About</a></li>
-			<li><a href="#projects">Projects</a></li>
-			<li><a href="#contact">Contact</a></li>
-		</ul>
-	</nav>
+    <section id="home" class="section1">
+        <h2>WELCOME TO MY PORTFOLIO!</h2>
+        <p>Discover my projects, skills and experience as a developer.</p>
+    </section>
 
+    <section id="about" class="section2">
+        <h2>ABOUT ME</h2>
+        <p>Hi, I’m Stelios, a 19-year-old Video Game Developer with several years of experience in the Unity Game Engine and C# programming. My passion for video games began in childhood, and now I'm dedicated to creating them. I’ve always been driven by my goals and am excited to keep pursuing my passion through game development.</p>
+    </section>
 
-	<section id="home" class="section1">
-		<h2>WELCOME TO MY PORTFOLIO!</h2>
-		<p>Discover my projects, skills and experience as a developer.</b> </p>
-	</section>
-
-
-	<section id="about" class="section2">
-		<h2>ABOUT ME</h2>
-		<p>Hi, I’m Stelios, a 19-year-old Video Game Developer with several years of experience in the Unity Game Engine and C# programming. My passion for video games began in childhood, and now I'm dedicated to creating them. I’ve always been driven by my goals and am excited to keep pursuing my passion through game development.</p>
-	</section>
-
-
-	<section id="projects" class="section3">
-		<h2>MY PROJECTS</h2>
-		<p>In here, you will find all of the projects that I've been developing throughout my time using Unity Game Engine.</p>
-		<div class="projects-grid">
-
-			<div class="crateninja">
-				<a href="https://thelegendknightgames.itch.io/crate-ninja">
-					<h3>Crate Ninja</h3>
-					<img src="CrateNinja.jpg">
-				</a>
-        	</div>
-
-        	<div class="flaptofreedom">	
-        		<a href="https://thelegendknightgames.itch.io/flap-to-freedom">
-        			<h3>Flap To Freedom</h3>
-        			<img src="FlapToFreedom.jpg" width="300px" height="300px">
-        		</a>   	
-        	</div>
-
-        	<div class="skyblaster">
-        		<a href="https://thelegendknightgames.itch.io/sky-blaster">
-        			<h3>Sky Blaster</h3>
-        			<img src="Sky Blaster.jpg">
-        		</a>
-        	</div>
-
+    <section id="projects" class="section3">
+        <h2>MY PROJECTS</h2>
+        <p>In here, you will find all of the projects that I've been developing throughout my time using Unity Game Engine.</p>
+        <div class="projects-grid">
+            <div class="crateninja">
+                <a href="https://thelegendknightgames.itch.io/crate-ninja">
+                    <h3>Crate Ninja</h3>
+                    <img src="CrateNinja.jpg" alt="Crate Ninja">
+                </a>
+            </div>
+            <div class="flaptofreedom">
+                <a href="https://thelegendknightgames.itch.io/flap-to-freedom">
+                    <h3>Flap To Freedom</h3>
+                    <img src="FlapToFreedom.jpg" width="300px" height="300px" alt="Flap To Freedom">
+                </a>
+            </div>
+            <div class="skyblaster">
+                <a href="https://thelegendknightgames.itch.io/sky-blaster">
+                    <h3>Sky Blaster</h3>
+                    <img src="Sky Blaster.jpg" alt="Sky Blaster">
+                </a>
+            </div>
         </div>
-	</section>
+    </section>
 
-
-	<section id="contact" class="section4">
-		<h2>CONTACT ME</h2>
-		<form action="SendEmail.php" method="POST">
-        	<div class="form-group">
-            	<label for="name">Name:</label>
-            	<input type="text" id="name" name="name" required>
-        	</div>
-
-        	<br>
-
-        	<div class="form-group">
-            	<label for="email">Email:</label>
-            	<input type="email" id="email" name="email" required>
-        	</div>
-
-        	<br>
-
-        	<div class="form-group">
-            	<label for="message">Message:</label>
-            	<textarea id="message" name="message" required></textarea>
-        	</div>
-
-        	<br>
-
-        	<button type="submit">Send</button>
+    <section id="contact" class="section4">
+        <h2>CONTACT ME</h2>
+        <form id="contact-form">
+            <div class="form-group">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required>
+            </div>
+            <br>
+            <div class="form-group">
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <br>
+            <div class="form-group">
+                <label for="message">Message:</label>
+                <textarea id="message" name="message" required></textarea>
+            </div>
+            <br>
+            <button type="button" id="send-button">Send</button> <!-- Updated button type -->
         </form>
-	</section>
+    </section>
 
+    <div class="social_links">
+        <a href="https://www.tiktok.com/@thelegendknightgames" target="_blank">
+            <i class="fa-brands fa-tiktok"></i>
+        </a>
+        <a href="https://www.youtube.com/@TheLegendKnightGames" target="_blank">
+            <i class="fa-brands fa-youtube"></i>
+        </a>
+        <a href="https://x.com/TheLegendKGames" target="_blank">
+            <i class="fa-brands fa-twitter"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/stelios-kromlidis-465b66283/" target="_blank">
+            <i class="fa-brands fa-linkedin"></i>
+        </a>
+    </div>
+    <div style="height: 10px;"></div>
 
-	<div class="social_links">
-		<a href="https://www.tiktok.com/@stelios_krom" target="_blank">
-			<i class="fa-brands fa-tiktok"></i>
-		</a>
-
-		<a href="https://www.youtube.com/@SteliosKrom" target="_blank">
-			<i class="fa-brands fa-youtube"></i>
-		</a>
-
-		<a href="https://twitter.com/Stelios_Krom" target="_blank">
-			<i class="fa-brands fa-twitter"></i>
-		</a>
-
-		<a href="https://www.linkedin.com/in/stelios-kromlidis-465b66283/" target="_blank">
-			<i class="fa-brands fa-linkedin"></i>
-		</a>
-	</div>
-	<div style="height: 10px;"></div>
+    <script src="script.js"></script> <!-- Linking the JS file -->
 </body>
 </html>
+
