--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <img src="My Photo.jpg" width="150" height="150" alt="My Latest Photo">
-    <h1>STELIOSKROM<br><p>Game Developer</p></h1><br>
+    <h1>STELIOSKROM<br><p>Game Developer / Programmer</p></h1><br>
 
     <nav class="navbar">
         <ul>
@@ -27,7 +27,7 @@
 
     <section id="about" class="section2">
         <h2>ABOUT ME</h2>
-        <p>Hi, I’m Stelios, a 19-year-old Video Game Developer with several years of experience in the Unity Game Engine and C# programming. My passion for video games began in childhood, and now I'm dedicated to creating them. I’ve always been driven by my goals and am excited to keep pursuing my passion through game development.</p>
+        <p>Hi, I’m Stelios, a 19-year-old Video Games Programmer from Greece and born in Athens. I have several years of experience in the Unity Game Engine and C# programming. My passion for video games began in childhood, and now I'm dedicated to creating them. I’ve always been driven by my goals and am excited to keep pursuing my passion through game development.</p>
     </section>
 
     <section id="projects" class="section3">
