Update - Add instagram icon for my studio website

--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
         <a href="https://www.linkedin.com/in/stelios-kromlidis-465b66283/" target="_blank">
             <i class="fa-brands fa-linkedin"></i>
         </a>
+        <a href="https://www.instagram.com/tlk_games/" target="_blank">
+            <i class="fa-brands fa-instagram"></i>
+        </a>
     </div>
     <div style="height: 10px;"></div>
 
