Update - Changed source image for the portfolio website

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/6ee80224ef.js" crossorigin="anonymous"></script> <!-- Font Awesome -->
 </head>
 <body>
-    <img src="My Photo.jpg" width="150" height="150" alt="My Latest Photo">
+    <img src="New Indie Game Studio Logo.png" width="150" height="150" alt="My Latest Photo">
     <h1>STELIOSKROM<br><p>Game Developer / Programmer</p></h1><br>
 
     <nav class="navbar">
