Update - Change the portfolio website elements and make it professional instead of personal

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>STELIOSKROM Portfolio</title>
+    <title>The Legend Knight Games Portfolio</title>
     <script src="https://kit.fontawesome.com/6ee80224ef.js" crossorigin="anonymous"></script> <!-- Font Awesome -->
 </head>
 <body>
-    <img src="New Indie Game Studio Logo.png" width="150" height="150" alt="My Latest Photo">
-    <h1>STELIOSKROM<br><p>Game Developer / Programmer</p></h1><br>
+    <img src="New Indie Game Studio Logo No Background.png" width="300" height="180"  alt="My Latest Photo">
+    <h1>TLK GAMES<br><p>Game Development & Publishing Team</p></h1><br>
 
     <nav class="navbar">
         <ul>
@@ -21,18 +21,18 @@
     </nav>
 
     <section id="home" class="section1">
-        <h2>WELCOME TO MY PORTFOLIO!</h2>
-        <p>Discover my projects, skills and experience as a developer.</p>
+        <h2>WELCOME TO MY TLK GAMES!</h2>
+        <p>Discover my projects, skills, and experience as a developer—sometimes working solo, other times collaborating with talented partners. As a team, we strive to create immersive experiences that are fun, engaging, and memorable, pushing the boundaries of game development.</p>
     </section>
 
     <section id="about" class="section2">
         <h2>ABOUT ME</h2>
-        <p>Hi, I’m Stelios, a Video Games Programmer from Greece and born in Athens. I have several years of experience in the Unity Game Engine and C# programming. My passion for video games began in childhood, and now I'm dedicated to creating them. I’ve always been driven by my goals and am excited to keep pursuing my passion through game development.</p>
+        <p>Hi, I’m Stelios, owner, developer, and publisher of TLK Games, based in Athens, Greece. With several years of experience working in Unity and C#, I’m passionate about turning ideas into immersive gaming experiences. My love for video games started in childhood, and today, I’m dedicated to bringing that passion to life through game development. Driven by clear goals and creativity, I’m excited to continue growing and creating within this dynamic industry.</p>
     </section>
 
     <section id="projects" class="section3">
         <h2>MY PROJECTS</h2>
-        <p>In here, you will find all of the projects that I've been developing throughout my time using Unity Game Engine.</p>
+        <p>Welcome to my project showcase—explore the games and experiences I’ve brought to life using Unity, each reflecting my passion and dedication to game development.</p>
         <div class="projects-grid">
             <div class="crateninja">
                 <a href="https://thelegendknightgames.itch.io/crate-ninja">
@@ -95,6 +95,10 @@
         </a>
     </div>
     <div style="height: 10px;"></div>
+
+    <footer class="trademark">
+        <p>All other trademarks are the property of their respective owners. © 2025 TLK GAMES™. All rights reserved.</p>
+    </footer>
 
     <script src="script.js"></script> <!-- Linking the JS file -->
 </body>
