Add my selfie image to my portfolio

--- a/index.html
+++ b/index.html
@@ -56,6 +56,15 @@
             I’m dedicated to bringing that passion to life through game development. Driven by clear goals 
             and creativity, I’m excited to continue growing and creating within this dynamic industry.
         </p>
+
+        <!-- Selfie added below the paragraph -->
+        <div class="about-selfie">
+            <img 
+                src="Selfie.jpg" 
+                alt="Stelios Kromlidis" 
+                loading="lazy"
+            >
+        </div>
     </section>
 
     <!-- PROJECTS -->
@@ -124,7 +133,6 @@
                 <textarea id="message" name="message" required></textarea>
             </div>
 
-            <!-- Keep ID for JS compatibility -->
             <button type="submit" id="send-button">Send</button>
         </form>
     </section>
