Improved my website

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         >
 
         <h1>TLK GAMES</h1>
-        <p class="subtitle">Game Development & Publishing Team</p>
+        <p class="subtitle">Indie Game Development Studio</p>
 
         <nav class="navbar">
             <ul>
@@ -142,17 +142,26 @@
         <a href="https://www.tiktok.com/@thelegendknightgames" target="_blank" rel="noopener noreferrer" aria-label="TLK Games on TikTok">
             <i class="fa-brands fa-tiktok"></i>
         </a>
+
         <a href="https://www.youtube.com/@TheLegendKnightGames" target="_blank" rel="noopener noreferrer" aria-label="TLK Games on YouTube">
             <i class="fa-brands fa-youtube"></i>
         </a>
+
         <a href="https://x.com/TheLegendKGames" target="_blank" rel="noopener noreferrer" aria-label="TLK Games on Twitter">
             <i class="fa-brands fa-twitter"></i>
         </a>
+
         <a href="https://www.linkedin.com/in/stelios-kromlidis-465b66283/" target="_blank" rel="noopener noreferrer" aria-label="Stelios on LinkedIn">
             <i class="fa-brands fa-linkedin"></i>
         </a>
+
         <a href="https://www.instagram.com/tlk_games/" target="_blank" rel="noopener noreferrer" aria-label="TLK Games on Instagram">
             <i class="fa-brands fa-instagram"></i>
+        </a>
+        
+        <!-- Discord -->
+        <a href="https://discord.gg/N2msavKA" target="_blank" rel="noopener noreferrer" aria-label="TLK Games on Discord">
+            <i class="fa-brands fa-discord"></i>
         </a>
     </div>
 
