--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
                         alt="Crate Ninja game screenshot"
                         loading="lazy"
                     >
+                    <div class="overlay">
+                        Endless ninja action! Dodge crates, rack up points, and aim for a new high score.
+                    </div>
                 </a>
             </div>
 
@@ -96,6 +99,9 @@
                         alt="Flap To Freedom game screenshot"
                         loading="lazy"
                     >
+                    <div class="overlay">
+                        Endless flappy adventure! Navigate obstacles, earn points, and beat your high score.
+                    </div>
                 </a>
             </div>
 
@@ -107,63 +113,50 @@
                         alt="Sky Blaster game screenshot"
                         loading="lazy"
                     >
+                    <div class="overlay">
+                        Endless shooting fun! Destroy falling fruits and compete for the highest score.
+                    </div>
                 </a>
             </div>
 
         </div>
     </section>
 
-    <!-- CONTACT -->
-    <section id="contact" class="section4">
-        <h2>CONTACT ME</h2>
+    <!-- CONNECT WITH ME -->
+    <section id="connect" class="section4">
+        <h2>CONNECT WITH ME</h2>
+        <p>
+            I’m always excited to connect with fellow gamers, developers, and fans. 
+            Reach out via any of my social platforms below to stay updated on my latest projects, 
+            share feedback, or just say hi!
+        </p>
 
-        <form id="contact-form">
-            <div class="form-group">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
-            </div>
+        <div class="social_links">
+            <a href="https://www.tiktok.com/@thelegendknightgames" target="_blank" rel="noopener noreferrer" aria-label="TLK Games on TikTok">
+                <i class="fa-brands fa-tiktok"></i>
+            </a>
 
-            <div class="form-group">
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-            </div>
+            <a href="https://www.youtube.com/@TheLegendKnightGames" target="_blank" rel="noopener noreferrer" aria-label="TLK Games on YouTube">
+                <i class="fa-brands fa-youtube"></i>
+            </a>
 
-            <div class="form-group">
-                <label for="message">Message:</label>
-                <textarea id="message" name="message" required></textarea>
-            </div>
+            <a href="https://x.com/TheLegendKGames" target="_blank" rel="noopener noreferrer" aria-label="TLK Games on Twitter">
+                <i class="fa-brands fa-twitter"></i>
+            </a>
 
-            <button type="submit" id="send-button">Send</button>
-        </form>
-    </section>
+            <a href="https://www.linkedin.com/in/stelios-kromlidis-465b66283/" target="_blank" rel="noopener noreferrer" aria-label="Stelios on LinkedIn">
+                <i class="fa-brands fa-linkedin"></i>
+            </a>
 
-    <!-- SOCIAL LINKS -->
-    <div class="social_links">
-        <a href="https://www.tiktok.com/@thelegendknightgames" target="_blank" rel="noopener noreferrer" aria-label="TLK Games on TikTok">
-            <i class="fa-brands fa-tiktok"></i>
-        </a>
+            <a href="https://www.instagram.com/tlk_games/" target="_blank" rel="noopener noreferrer" aria-label="TLK Games on Instagram">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
 
-        <a href="https://www.youtube.com/@TheLegendKnightGames" target="_blank" rel="noopener noreferrer" aria-label="TLK Games on YouTube">
-            <i class="fa-brands fa-youtube"></i>
-        </a>
-
-        <a href="https://x.com/TheLegendKGames" target="_blank" rel="noopener noreferrer" aria-label="TLK Games on Twitter">
-            <i class="fa-brands fa-twitter"></i>
-        </a>
-
-        <a href="https://www.linkedin.com/in/stelios-kromlidis-465b66283/" target="_blank" rel="noopener noreferrer" aria-label="Stelios on LinkedIn">
-            <i class="fa-brands fa-linkedin"></i>
-        </a>
-
-        <a href="https://www.instagram.com/tlk_games/" target="_blank" rel="noopener noreferrer" aria-label="TLK Games on Instagram">
-            <i class="fa-brands fa-instagram"></i>
-        </a>
-        
-        <!-- Discord -->
-        <a href="https://discord.gg/N2msavKA" target="_blank" rel="noopener noreferrer" aria-label="TLK Games on Discord">
-            <i class="fa-brands fa-discord"></i>
-        </a>
+            <a href="https://discord.gg/N2msavKA" target="_blank" rel="noopener noreferrer" aria-label="TLK Games on Discord">
+                <i class="fa-brands fa-discord"></i>
+            </a>
     </div>
+</section>
 
     <footer class="trademark">
         <p>
@@ -173,5 +166,8 @@
     </footer>
 
     <script src="script.js"></script>
+    <!-- SCROLL BUTTONS -->
+        <a href="#home" class="scroll-btn scroll-up" aria-label="Scroll to top">&#8679;</a>
+        <a href="#connect" class="scroll-btn scroll-down" aria-label="Scroll to bottom">&#8681;</a>
 </body>
 </html>
