--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             loading="lazy"
         >
 
-        <h1>TLK GAMES</h1>
+        <h1>LEGEND KNIGHT GAMES</h1>
         <p class="subtitle">Indie Game Development Studio</p>
 
         <nav class="navbar">
@@ -38,7 +38,7 @@
             </ul>
         </nav>
 
-        <h2>WELCOME TO TLK GAMES!</h2>
+        <h2>WELCOME TO LEGEND KNIGHT GAMES!</h2>
         <p>
             Discover my projects, skills, and experience as a developer—sometimes working solo, 
             other times collaborating with talented partners. As a team, we strive to create immersive 
@@ -50,7 +50,7 @@
     <section id="about" class="section2">
         <h2>ABOUT ME</h2>
         <p>
-            Hi, I’m Stelios, owner, developer, and publisher of TLK Games, based in Athens, Greece. 
+            Hi, I’m Stelios, owner, developer, and publisher of Legend Knight Games, based in Athens, Greece. 
             With several years of experience working in Unity and C#, I’m passionate about turning ideas 
             into immersive gaming experiences. My love for video games started in childhood, and today, 
             I’m dedicated to bringing that passion to life through game development. Driven by clear goals 
@@ -132,7 +132,7 @@
         </p>
 
         <div class="social_links">
-            <a href="https://www.tiktok.com/@thelegendknightgames" target="_blank" rel="noopener noreferrer" aria-label="TLK Games on TikTok">
+            <a href="https://www.tiktok.com/@legendknightgames" target="_blank" rel="noopener noreferrer" aria-label="TLK Games on TikTok">
                 <i class="fa-brands fa-tiktok"></i>
             </a>
 
@@ -148,7 +148,7 @@
                 <i class="fa-brands fa-linkedin"></i>
             </a>
 
-            <a href="https://www.instagram.com/tlk_games/" target="_blank" rel="noopener noreferrer" aria-label="TLK Games on Instagram">
+            <a href="https://www.instagram.com/legendknightgames/" target="_blank" rel="noopener noreferrer" aria-label="TLK Games on Instagram">
                 <i class="fa-brands fa-instagram"></i>
             </a>
 
@@ -161,7 +161,7 @@
     <footer class="trademark">
         <p>
             All other trademarks are the property of their respective owners. 
-            © 2025 TLK GAMES™. All rights reserved.
+            © 2025 LEGEND KNIGHT GAMES™. All rights reserved.
         </p>
     </footer>
 
